--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
@@ -16,17 +16,17 @@
                         <span asp-validation-for="Model.Code" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
-                        <input asp-for="Model.Title" class="form-control" placeholder="Main Text" />
+                        <input asp-for="Model.Title" class="form-control" placeholder="Title" />
                         <label asp-for="Model.Title" class="control-label"></label>
                         <span asp-validation-for="Model.Title" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
-                        <input asp-for="Model.SubTitle" class="form-control" placeholder="Sub Text" />
+                        <textarea asp-for="Model.SubTitle" class="form-control" placeholder="SubTitle"></textarea>
                         <label asp-for="Model.SubTitle" class="control-label"></label>
                         <span asp-validation-for="Model.SubTitle" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
-                        <input asp-for="Model.Description" class="form-control" placeholder="Description" />
+                        <textarea asp-for="Model.Description" class="form-control" placeholder="Description" style="height:100px;"></textarea>
                         <label asp-for="Model.Description" class="control-label"></label>
                         <span asp-validation-for="Model.Description" class="text-danger"></span>
                     </div>
@@ -38,13 +38,6 @@
                             <option value="@image.Id">@image.ImageName</option>
                         }
                     </select>
-                       
-                    @if (Model.ImageIdSelected != "")
-                    {
-                        <div class="mb-3">
-                            <img id="image-block-card" src="@Model.ImageUrlSelected" style="width:100px;"/>
-                        </div>
-                    }
 
                     <div class="mt-4 mb-0">
                         <div class="d-grid">
