--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Edit.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Edit.cshtml
@@ -21,12 +21,12 @@
                         <span asp-validation-for="Model.Title" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
-                        <input asp-for="Model.SubTitle" class="form-control" />
+                        <textarea asp-for="Model.SubTitle" class="form-control"></textarea>
                         <label asp-for="Model.SubTitle" class="control-label"></label>
                         <span asp-validation-for="Model.SubTitle" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
-                        <input asp-for="Model.Description" class="form-control" />
+                        <textarea asp-for="Model.Description" class="form-control"></textarea>
                         <label asp-for="Model.Description" class="control-label"></label>
                         <span asp-validation-for="Model.Description" class="text-danger"></span>
                     </div>
@@ -34,7 +34,14 @@
                         <option selected value="">Select an images</option>
                         @foreach (var image in Model.Images)
                         {
-                            <option value="@image.Id">@image.ImageName</option>
+                            if (image.ImageUrl == Model.ImageUrlSelected)
+                            {
+                                <option selected value="@image.Id">@image.ImageName</option>
+                            }
+                            else
+                            {
+                                <option value="@image.Id">@image.ImageName</option>
+                            }
                         }
                     </select>
 
