Update languages crud

--- a/Core/OpenCRM.Core.Web/Components/Table/Table.razor
+++ b/Core/OpenCRM.Core.Web/Components/Table/Table.razor
@@ -6,7 +6,7 @@
             @TableData.Title
         </div>
         <div>
-            <ButtonLink Label="Create new" Url="@(TableData.Page + "/Create")"/>
+            <ButtonLink Label="Create new" Url="@(TableData.Page + "/Create")" Style="btn btn-primary"/>
         </div>
     </div>
     <div class="card-body">
