Change Manage Page content

--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Index.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Index.cshtml
@@ -12,6 +12,8 @@
     <title>OpenCRM Core Web Management Module</title>
 </head>
 <body>
-    <component type="typeof(OpenCRM.Core.Web.Components.BreadCrumb)" render-mode="ServerPrerendered" param-links="Model.Links" />
+    <div class="container-fluid">
+        <h1>OpenCRM - Management</h1>
+    </div>
 </body>
 </html>
