Updated CRUD Block Views

--- a/Core/OpenCRM.Core.Web/Components/Table/Table.razor
+++ b/Core/OpenCRM.Core.Web/Components/Table/Table.razor
@@ -1,5 +1,5 @@
 ﻿
-<div class="card">
+<div class="card mt-3">
     <div class="card-header d-flex justify-content-between">
         <div>
             <i class="fas fa-table me-1"></i>
