--- a/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Event/Delete.cshtml
+++ b/Modules/OpenCRM.SwissLPD/Areas/SwissLDP/Pages/Event/Delete.cshtml
@@ -4,37 +4,53 @@
     ViewData["Title"] = "Delete";
 }
 
-<div class="container-fluid">
+<div class="container-fluid mt-3">
     <div class="row justify-content-center">
         <div class="card border-1 rounded-lg p-0">
             <div class="card-header text-center">
                 <h3 class="font-weight-light my-4">Delete</h3>
-                <h4>Are you sure you want to delete this?</h4>
             </div>
             <div class="card-body">
-                <form>
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <div class="form-floating mb-3">
-                        <input asp-for="Model.Data.Description" class="form-control" readonly />
-                        <label asp-for="Model.Data.Description" class="control-label"></label>
-                        <span asp-validation-for="Model.Data.Description" class="text-danger"></span>
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-floating mb-3">
+                    <input asp-for="Model.Data.Description" class="form-control" readonly />
+                    <label asp-for="Model.Data.Description" class="control-label"></label>
+                    <span asp-validation-for="Model.Data.Description" class="text-danger"></span>
+                </div>
+                <div class="form-floating mb-3">
+                    <input asp-for="Model.Data.StartDate" class="form-control" readonly />
+                    <label asp-for="Model.Data.StartDate" class="control-label"></label>
+                    <span asp-validation-for="Model.Data.StartDate" class="text-danger"></span>
+                </div>
+                <div class="form-floating mb-3">
+                    <input asp-for="Model.Data.EndDate" class="form-control" readonly />
+                    <label asp-for="Model.Data.EndDate" class="control-label"></label>
+                    <span asp-validation-for="Model.Data.EndDate" class="text-danger"></span>
+                </div>
+
+                <div class="modal fade" id="confirmationModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Delete Confirmation</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                Are you sure you want to delete this?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                <button type="submit" form="deleteForm" class="btn btn-danger">Delete</button>
+                            </div>
+                        </div>
                     </div>
-                    <div class="form-floating mb-3">
-                        <input asp-for="Model.Data.StartDate" class="form-control" readonly />
-                        <label asp-for="Model.Data.StartDate" class="control-label"></label>
-                        <span asp-validation-for="Model.Data.StartDate" class="text-danger"></span>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <input asp-for="Model.Data.EndDate" class="form-control" readonly />
-                        <label asp-for="Model.Data.EndDate" class="control-label"></label>
-                        <span asp-validation-for="Model.Data.EndDate" class="text-danger"></span>
-                    </div>
-                </form>
-                <form method="post">
+                </div>
+
+                <form id="deleteForm" method="post">
                     <input type="hidden" asp-for="Model.ID" />
                     <div class="mt-4 mb-0">
                         <div class="d-grid">
-                            <input type="submit" value="Delete" class="btn btn-danger" />
+                            <input type="button" value="Delete" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#confirmationModal" />
                         </div>
                     </div>
                 </form>
