Edit user profile

--- a/Core/OpenCRM.Core.Web/Components/Navbar.razor
+++ b/Core/OpenCRM.Core.Web/Components/Navbar.razor
@@ -56,7 +56,8 @@
                                 <DropdownMenu Menu="@DropdownMenuModules" />
                             </li>
 
-                            <li class="dropdown-item">Edit Profile</li>
+                            <li><a class="dropdown-item" href="/Identity/Manage/Index">Edit Profile</a></li>
+
                             <li><a class="dropdown-item" href="/Identity/Logout">Logout</a></li>
                         </ul>
                     </li>
