--- a/Core/OpenCRM.Core.Web/Components/Navbar.razor
+++ b/Core/OpenCRM.Core.Web/Components/Navbar.razor
@@ -44,9 +44,15 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end p-2 mt-2" aria-labelledby="navbarDropdown">
                             <li class="d-flex justify-content-center m-2">
-                                <div class="d-flex justify-content-center align-items-center"
-                                    style="width:50px; height:50px; border: 1px solid gray; border-radius:50px; background-color:transparent;">
-                                    <i class="fa fa-user"></i>
+                                <div class="d-flex justify-content-center align-items-center" style="width: 50px; height: 50px; border: 1px solid gray; border-radius: 50px; background-color: transparent;">
+                                    @if (Avatar != null && Avatar.Length > 0)
+                                    {
+                                        <img id="userAvatar" src="data:image/jpeg;base64,@Convert.ToBase64String(Avatar)" alt="User Avatar" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;" />
+                                    }
+                                    else
+                                    {
+                                        <img id="userAvatar" src="/_content/OpenCRM.Core.Web/images/defaultuser.png" alt="Default User Avatar" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;" />
+                                    }
                                 </div>
                             </li>
 
