--- a/OpenCRM.Web/Pages/Index.cshtml
+++ b/OpenCRM.Web/Pages/Index.cshtml
@@ -11,5 +11,6 @@
 <div class="text-center">
     <h1 class="display-4">@Localizer["Welcome"]</h1>
     <p> <a href="https://docs.microsoft.com/aspnet/core">@Localizer["Learnabout"]</a>.</p>
+    <p>Selected Language: @Model.Lang</p>
 </div>
 
