--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
@@ -21,12 +21,12 @@
                         <span asp-validation-for="Model.Title" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
-                        <textarea asp-for="Model.SubTitle" class="form-control" placeholder="SubTitle"></textarea>
+                        <textarea asp-for="Model.SubTitle" class="form-control" placeholder="SubTitle" style="resize:none;"></textarea>
                         <label asp-for="Model.SubTitle" class="control-label"></label>
                         <span asp-validation-for="Model.SubTitle" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
-                        <textarea asp-for="Model.Description" class="form-control" placeholder="Description" style="height:100px;"></textarea>
+                        <textarea asp-for="Model.Description" class="form-control" placeholder="Description" style="height:100px; resize:none;"></textarea>
                         <label asp-for="Model.Description" class="control-label"></label>
                         <span asp-validation-for="Model.Description" class="text-danger"></span>
                     </div>
@@ -44,7 +44,7 @@
                             <input type="submit" value="Create" class="btn btn-primary btn-block"/>
                         </div>
                     </div>
-                    
+					
                     @if (Model.ValidateError != "")
                     {
                         <div class="mt-4">
