--- a/Core/OpenCRM.Core.Web/Components/Block.razor
+++ b/Core/OpenCRM.Core.Web/Components/Block.razor
@@ -1,26 +1,33 @@
 ﻿
-@if(BlockModel.Title != "")
-{
-    <h1>@BlockModel.Title</h1>
-    
-    @if (BlockModel.SubTitle != null && BlockModel.SubTitle != "")
-    {
-        <h2>@BlockModel.SubTitle</h2>
-    }
+<article class="block container">
+    <div class="block-container">
+        @if (BlockItem.Title != "")
+        {
+            <div class="block-text-container">
+                <h1 class="block-title">@BlockItem.Title</h1>
 
-    @if(BlockModel.Description != null)
-    {
-        <p>@BlockModel.Description</p>
-    }
+                @if (!string.IsNullOrEmpty(BlockItem.SubTitle))
+                {
+                    <h2 class="block-subtitle">@BlockItem.SubTitle</h2>
+                }
 
-    @if(BlockModel.Type == BlockType.Card)
-    {
-        <img src="@BlockModel.ImageUrl"/>
-    }
-}
+                @if (!string.IsNullOrEmpty(BlockItem.Description))
+                {
+                    <p class="block-description">@BlockItem.Description</p>
+                }
+            </div>
+
+            @if (BlockItem.Type == BlockType.Card)
+            {
+                <img class="block-image" src="@BlockItem.ImageUrl" />
+            }
+        }
+    </div>
+</article>
 
 
 @code {
     [Parameter]
-    public BlockModel BlockModel { get; set; } = new BlockModel();
+    public BlockModel BlockItem { get; set; } = new BlockModel();
+
 }
