--- a/OpenCRM.Web/Pages/Index.cshtml
+++ b/OpenCRM.Web/Pages/Index.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Home page";
 }
 
-@*<component type="typeof(OpenCRM.Core.Web.Components.BreadCrumb)" render-mode="ServerPrerendered" param-links="Model.Links" />*@
-
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <component type="typeof(OpenCRM.Core.Web.Components.Block)" render-mode="ServerPrerendered" param-blockItem="Model.Block" />
 </div>
 
