--- a/Core/OpenCRM.Core.Web/Components/Navbar.razor
+++ b/Core/OpenCRM.Core.Web/Components/Navbar.razor
@@ -61,10 +61,15 @@
                             <li class="dropstart">
                                 <DropdownMenu Menu="@DropdownMenuModules" />
                             </li>
-
-                            <li><a class="dropdown-item" href="/Identity/Manage/Index">Edit Profile</a></li>
-
-                            <li><a class="dropdown-item" href="/Identity/Logout">Logout</a></li>
+                            @if (!string.IsNullOrEmpty(Name))
+                            {
+                                <li>
+                                    <a class="dropdown-item" id="editProfileLink" href="/Identity/Manage/Index">
+                                        Edit Profile
+                                    </a>
+                                </li>
+                                <li><a class="dropdown-item" href="/Identity/Logout">Logout</a></li>
+                            }
                         </ul>
                     </li>
                 </ul>
@@ -72,3 +77,7 @@
         </div>
     </div>
 </nav>
+
+<script>
+    document.getElementById('editProfileLink').href += '?returnUrl=' + encodeURIComponent(window.location.href);
+</script>
