--- a/Core/OpenCRM.Core.Web/Pages/Identity/Manage/Index.cshtml
+++ b/Core/OpenCRM.Core.Web/Pages/Identity/Manage/Index.cshtml
@@ -3,6 +3,7 @@
 
 @{
     Layout = "_CoreEmptyLayout";
+     
 }
 
 
@@ -57,7 +58,7 @@
                         
                     <div class="form-group" style="margin-top: 10px;">
                     <button type="submit" class="btn btn-primary">Save</button>
-                     <button class="btn bt-secundary" href="/">Cancel</button>
+                            <a class="btn btn-secondary text-center ms-2" role="button" href="/">Cancel</a>
                     </div>
                 </form>
                 </div>
