--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Edit.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Edit.cshtml
@@ -3,7 +3,7 @@
 @{
 }
 
-<div class="container-fluid">
+<div class="container-fluid mt-3">
     <div class="row justify-content-center">
         <div class="card border-1 rounded-lg p-0">
             <div class="card-header"><h3 class="text-center font-weight-light my-4">Edit</h3></div>
@@ -21,12 +21,12 @@
                         <span asp-validation-for="Model.Title" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
-                        <input asp-for="Model.SubTitle" class="form-control" />
+                        <textarea asp-for="Model.SubTitle" class="form-control" style="resize:none;"></textarea>
                         <label asp-for="Model.SubTitle" class="control-label"></label>
                         <span asp-validation-for="Model.SubTitle" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
-                        <input asp-for="Model.Description" class="form-control" />
+                        <textarea asp-for="Model.Description" class="form-control" style="height:100px; resize:none;"></textarea>
                         <label asp-for="Model.Description" class="control-label"></label>
                         <span asp-validation-for="Model.Description" class="text-danger"></span>
                     </div>
@@ -34,14 +34,23 @@
                         <option selected value="">Select an images</option>
                         @foreach (var image in Model.Images)
                         {
-                            <option value="@image.Id">@image.ImageName</option>
+                            if (image.ImageUrl == Model.ImageUrlSelected)
+                            {
+                                <option selected value="@image.Id">@image.ImageName</option>
+                            }
+                            else
+                            {
+                                <option value="@image.Id">@image.ImageName</option>
+                            }
                         }
                     </select>
 
                     @if (!string.IsNullOrEmpty(Model.ImageUrlSelected))
                     {
                         <div class="mb-3">
-                            <img src="@Model.ImageUrlSelected" style="width:100px;" />
+                            <a href="@Model.ImageUrlSelected">
+                                <img src="@Model.ImageUrlSelected" style="width:100px;" />
+                            </a>
                         </div>
                     }
                     <div class="mt-4 mb-0">
