--- a/Core/OpenCRM.Core.Web/Components/Table/Table.razor
+++ b/Core/OpenCRM.Core.Web/Components/Table/Table.razor
@@ -1,5 +1,5 @@
 ﻿
-<div class="card">
+<div class="card mt-3">
     <div class="card-header d-flex justify-content-between">
         <div>
             <i class="fas fa-table me-1"></i>
@@ -37,6 +37,13 @@
                                     <ButtonLink Label="@item.Label" Url="@(TableData.Page + "/" + item.Label + "?id=" + row.ID)" Icon="@item.IconName" />
                                 </td>
                             }   
+                            else if(item.IsImage) {
+                                <td>
+                                    <a href="@item.ImageUrl">
+                                        <img src="@item.ImageUrl" style="width:50px;" />
+                                    </a>
+                                </td>
+                            }
                             else
                             {
                                 <td>
