Update Index to use data block component

--- a/Core/OpenCRM.Core.Web/Components/Block.razor
+++ b/Core/OpenCRM.Core.Web/Components/Block.razor
@@ -30,4 +30,8 @@
     [Parameter]
     public BlockModel BlockItem { get; set; } = new BlockModel();
 
+    protected override void OnInitialized()
+    {
+        Console.WriteLine(BlockItem.Code);
+    }
 }
