--- a/OpenCRM.Web/Pages/Index.cshtml
+++ b/OpenCRM.Web/Pages/Index.cshtml
@@ -1,20 +1,20 @@
 ﻿@page
-@model IndexModel
+@model OpenCRM.Web.Pages.IndexModel
 @inject Microsoft.AspNetCore.Mvc.Localization.IViewLocalizer Localizer
 @inject OpenCRM.Core.Web.Services.LanguageService.ILanguageService LanguageService
 @inject OpenCRM.Core.Web.Services.TranslationService.ITranslationService TranslationService
-
 @{
     ViewData["Title"] = @Localizer["Homepage"];
 }
 
-@*<component type="typeof(OpenCRM.Core.Web.Components.BreadCrumb)" render-mode="ServerPrerendered" param-links="Model.Links" />*@
 
 <div class="text-center">
     <h1 class="display-4">@Localizer["Welcome"]</h1>
     <p> <a href="https://docs.microsoft.com/aspnet/core">@Localizer["Learnabout"]</a>.</p>
     <p>Selected Language: @Model.Lang</p>
     <p>Traduccion a KeyAccept: @TranslationService.GetTranslationValue("KeyAccept")</p>
-    <component type="typeof(OpenCRM.Core.Web.Components.Block)" render-mode="ServerPrerendered" param-blockItem="Model.Block" />
-</div>
 
+
+    <component type="typeof(OpenCRM.Core.Web.Components.Block)" render-mode="ServerPrerendered" param-blockItem="Model.Block" />
+
+</div>
