--- a/Core/OpenCRM.Core.Web/Components/Block.razor
+++ b/Core/OpenCRM.Core.Web/Components/Block.razor
@@ -28,7 +28,7 @@
 
 @code {
     [Parameter]
-    public BlockModel BlockItem { get; set; } = new BlockModel();
+    public CardBlockModel BlockItem { get; set; } = new CardBlockModel();
 
     protected override void OnInitialized()
     {
