Create or Get Block in Index.cs

--- a/Core/OpenCRM.Core.Web/Components/Navbar.razor
+++ b/Core/OpenCRM.Core.Web/Components/Navbar.razor
@@ -77,7 +77,7 @@
         </div>
     </div>
 </nav>
-
+@*
 <script>
     document.getElementById('editProfileLink').href += '?returnUrl=' + encodeURIComponent(window.location.href);
-</script>
+</script>*@
