--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Edit.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Edit.cshtml
@@ -11,7 +11,7 @@
                 <form method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-floating mb-3">
-                        <input asp-for="Model.Code" class="form-control" />
+                        <input asp-for="Model.Code" class="form-control" readonly/>
                         <label asp-for="Model.Code" class="control-label"></label>
                         <span asp-validation-for="Model.Code" class="text-danger"></span>
                     </div>
