--- a/OpenCRM.Web/Pages/Index.cshtml
+++ b/OpenCRM.Web/Pages/Index.cshtml
@@ -14,7 +14,29 @@
     <p>Selected Language: @Model.Lang</p>
     <p>Traduccion a KeyAccept: @TranslationService.GetTranslationValue("KeyAccept")</p>
 
+    @if (Model.Block != null && Model.Block.Title != "")
+    {
+        <article class="block container">
+            <div class="block-info">
+                <div class="block-text-info">
+                    <h1 class="block-title">@Model.Block.Title</h1>
 
-    <component type="typeof(OpenCRM.Core.Web.Components.Block)" render-mode="ServerPrerendered" param-blockItem="Model.Block" />
+                    @if (!string.IsNullOrEmpty(Model.Block.SubTitle))
+                    {
+                        <h2 class="block-subtitle">@Model.Block.SubTitle</h2>
+                    }
 
+                    @if (!string.IsNullOrEmpty(Model.Block.Description))
+                    {
+                        <p class="block-description">@Model.Block.Description</p>
+                    }
+                </div>
+
+                @if (!string.IsNullOrEmpty(Model.Block.ImageUrl))
+                {
+                    <img class="block-image" src="@Model.Block.ImageUrl" />
+                }
+            </div>
+        </article>
+    }
 </div>
