last updates Crud languages and translations finish

--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Create.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Create.cshtml
@@ -17,28 +17,21 @@
                             <label asp-for="Translation.Key" class="control-label"></label>
                             <span asp-validation-for="Translation.Key" class="text-danger"></span>
                         </div>
-
-
-                        <div class="form-floating mb-3">
+                         <div class="form-floating mb-3">
                             <input asp-for="Translation.Translation" class="form-control" />
                             <label asp-for="Translation.Translation" class="control-label"></label>
                             <span asp-validation-for="Translation.Translation" class="text-danger"></span>
-                        </div>
-                       
-                        <div class="form-floating mb-3">
+                        </div>                       
+                       @* <div class="form-floating mb-3">
                             <select asp-for="Translation.LanguageId" asp-items="Model.Languages" class="form-select">
                                 <option selected>Select a Language</option>
                             </select>
-                            <span asp-validation-for="Translation.LanguageId" class="text-danger"></span>
-                            
-                        </div>
-
-
+                            <span asp-validation-for="Translation.LanguageId" class="text-danger"></span>                            
+                        </div>*@
                         @if (Model.Languages.Count != 0)
                         {
                             for (int index = 0; index < Model.Languages.Count; index++)
                             {
-
                                 <div class="form-floating mb-3">
                                     <p>Lenguage: @Model.Languages[index].Text</p>
                                 </div>
@@ -49,9 +42,6 @@
                                 </div>
                             }
                         }
-
-
-
                         <div class="mt-4 mb-0">
                             <div class="d-grid">
                                 <input type="submit" value="Create" class="btn btn-primary btn-block" />
