--- a/Core/OpenCRM.Core.Web/Pages/Identity/Manage/Index.cshtml
+++ b/Core/OpenCRM.Core.Web/Pages/Identity/Manage/Index.cshtml
@@ -3,6 +3,7 @@
 
 @{
     Layout = "_CoreEmptyLayout";
+
      
 }
 
@@ -15,50 +16,48 @@
                 <div class="card-body">
                     <form id="account" method="post" enctype="multipart/form-data">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                        <div class="row justify-content-between" style="margin-bottom: 10px;">
+                        <div class="row justify-content-between" style="margin-top: 10px;">
                             <div class="col-md-6">
-                                @if (Model.Input.Avatar != null && Model.Input.Avatar.Length > 0)
-                                {
-                                    <img id="userAvatar" src="data:image/jpeg;base64,@Convert.ToBase64String(Model.Input.Avatar)" alt="User Avatar" style="max-width: 1550px; max-height: 150px;" />
-                                }
-                                else
-                                {
-                                    <img id="userAvatar" src="/_content/OpenCRM.Core.Web/images/defaultuser.png" alt="Default User Avatar" style="max-width: 1550px; max-height: 150px;" />
-                                }
+                                <div class="position-relative d-inline-block">
+                                    <div id="previewContainer" class="position-relative rounded-circle overflow-hidden border border-gray-300 border-2" style="max-width: 200px; max-height: 200px; width: 100%; height: auto; position: relative;">
+                                        @if (Model.Input.Avatar != null && Model.Input.Avatar.Length > 0)
+                                        {
+                                            <img id="userAvatar" src="data:image/jpeg;base64,@Convert.ToBase64String(Model.Input.Avatar)" alt="User Avatar" class="img-fluid" style="width: 100%; height: 100%; object-fit: cover;" />
+                                        }
+                                        else
+                                        {
+                                            <img id="userAvatar" src="/_content/OpenCRM.Core.Web/images/defaultuser.png" alt="Default User Avatar" class="img-fluid" style="width: 100%; height: 100%; object-fit: cover;" />
+                                        }
 
-                                <div id="previewContainer" class="col-md-6" style="display: none;">
-                                    <img id="preview" src="#" alt="Preview" style="max-width: 200px; max-height: 200px;" />
+                                        <label for="avatar" class="position-absolute bottom-0 end-0 m-2">
+                                            <i class="fas fa-camera m-3 custom-camera-icon" style="cursor: pointer; font-size: 2rem;"></i>
+                                        </label>
+
+                                        <input asp-for="uploadAvatar" type="file" id="avatar" name="uploadAvatar" accept="image/*" onchange="previewImage(event)" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; opacity: 0; cursor: pointer;" />
+                                    </div>
                                 </div>
-
                             </div>
-                                <div class="col-md-6">
-                                    <label for="avatar">Avatar:</label>
-                                    <input asp-for="uploadAvatar" type="file" id="avatar" name="uploadAvatar" accept="image/*" onchange="previewImage(event)" />
+                            <div class="col-md-6">
+                                <div class="form-floating mb-3 mb-md-3">
+                                    <input asp-for="Input.Name" class="form-control" placeholder="Enter your first name" />
+                                    <label asp-for="Input.Name">First name</label>
+                                    <span asp-validation-for="Input.Name" class="text-danger"></span>
                                 </div>
+                                <div class="form-floating">
+                                    <input asp-for="Input.Lastname" class="form-control" placeholder="Enter your last name" />
+                                    <label asp-for="Input.Lastname">Last name</label>
+                                    <span asp-validation-for="Input.Lastname" class="text-danger"></span>
+                                </div>
+                            </div>
 
-                      </div>
 
                         <div class="row justify-content-between" style="margin-top: 10px;">
-                      <div class="col-md-6">
-                            <div class="form-floating mb-3 mb-md-0">
-                                <input asp-for="Input.Name" class="form-control" placeholder="Enter your first name" />
-                                <label asp-for="Input.Name">First name</label>
-                                <span asp-validation-for="Input.Name" class="text-danger"></span>
+                            <div class="d-grid gap-2 col-6 mx-auto">
+                                <button type="submit" class="btn btn-primary">Save</button>
                             </div>
-                      </div>
-
-                     <div class="col-md-6">
-                            <div class="form-floating">
-                                <input asp-for="Input.Lastname" class="form-control" placeholder="Enter your last name" />
-                                <label asp-for="Input.Lastname">Last name</label>
-                                <span asp-validation-for="Input.Lastname" class="text-danger"></span>
-                           </div>
-                    </div>
-                </div>
-                        
-                    <div class="form-group" style="margin-top: 10px;">
-                    <button type="submit" class="btn btn-primary">Save</button>
-                            <a class="btn btn-secondary text-center ms-2" role="button" href="/">Cancel</a>
+                                <div class="d-grid gap-2 col-6 mx-auto">
+                                 <a class="btn btn-secondary text-center ms-2" role="button" href="/">Cancel</a>
+                            </div>
                     </div>
                 </form>
                 </div>
@@ -67,33 +66,30 @@
     </div>
 </div>
 
+
+
+<style>
+   
+    .custom-camera-icon {
+        color: #007bff; 
+    }
+    
+    </style>
+
 @section Scripts {
     <script>
+        
         function previewImage(event) {
-            var input = event.target;
-            var preview = document.getElementById('preview');
-            var previewContainer = document.getElementById('previewContainer');
-            var userAvatar = document.getElementById('userAvatar');
+            const input = event.target;
+            const reader = new FileReader();
 
-            if (input.files && input.files[0]) {
-                var reader = new FileReader();
+            reader.onload = function () {
+                const preview = document.getElementById('userAvatar');
+                preview.src = reader.result;
+            };
 
-                reader.onload = function (e) {
-                    userAvatar.style.display = 'none'; 
-                    preview.src = e.target.result;
-                    preview.style.display = 'block'; 
-                    previewContainer.style.display = 'block'; 
-                }
-
-                reader.readAsDataURL(input.files[0]);
-            } else {
-                userAvatar.style.display = 'block'; 
-                preview.src = '#';
-                preview.style.display = 'none';
-                previewContainer.style.display = 'none'; 
-            }
+            reader.readAsDataURL(input.files[0]);
         }
-
 
     </script>
 }
