Refactored Language CRUD & LanguageServices

--- a/Core/OpenCRM.Core.Web/Components/Navbar.razor
+++ b/Core/OpenCRM.Core.Web/Components/Navbar.razor
@@ -80,6 +80,6 @@
     </div>
 </nav>
 
-<script>
+@*<script>
     document.getElementById('editProfileLink').href += '?returnUrl=' + encodeURIComponent(window.location.href);
-</script>
+</script>*@
