--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Languages/Details.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Languages/Details.cshtml
@@ -21,11 +21,11 @@
                         <label asp-for="Language.Name" class="control-label"></label>
                         <span asp-validation-for="Language.Name" class="text-danger"></span>
                     </div>
-                    <label asp-for="Language.Translations" class="control-label" readonly></label>
+               @*     <label asp-for="Language.Translations" class="control-label" readonly></label>
                     <div class="form-floating mb-3">
                         <textarea asp-for="Language.Translations" class="form-control, text-danger " style="height: 15rem; width: 100%;" disabled></textarea>
                         <span asp-validation-for="Language.Translations" class="text-danger"></span>
-                    </div>
+                    </div>*@
                 </form>
             </div>
             <div class="card-footer text-center py-3">
