--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Edit.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Edit.cshtml
@@ -20,9 +20,15 @@
                         <div class="form-floating mb-3">
                             <input asp-for="Translation.Translation" class="form-control" />
                             <label asp-for="Translation.Translation" class="control-label"></label>
-                            <span asp-validation-for="Translation.Translation" class="text-danger"></span>
+                            @*<span asp-validation-for="Translation.Translation" class="text-danger"></span>*@
                         </div>
-                        @if (Model.Languages.Count != 0)
+                        <div class="form-floating mb-2">
+                            <option selected>Select a Language</option>
+                            <select asp-for="Translation.LanguageId" asp-items="Model.Languages" class="form-select">                                
+                                <span asp-validation-for="Translation.LanguageId" class="text-danger"></span>
+                            </select>                            
+                        </div>
+                        @*@if (Model.Languages.Count != 0)
                         {
                             for (int index = 0; index < Model.Languages.Count; index++)
                             {
@@ -35,7 +41,7 @@
                                     <span asp-validation-for=" TranslationValues[index]" class="text-danger"></span>
                                 </div>
                             }
-                        }
+                        }*@
                         <div class="mt-4 mb-0">
                             <div class="d-grid">
                                 <input type="submit" value="Save" class="btn btn-primary" />
