--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Languages/Edit.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Languages/Edit.cshtml
@@ -23,7 +23,7 @@
                     </div>
                     <label asp-for="Language.Translations" class="control-label"></label>
                     <div class="form-floating mb-3">
-                        <textarea asp-for="JsonData" class="form-control, text-danger " placeholder='{"KeyAccept" :  , "KeyCreate" : }' style="height: 15rem; width: 100%;"></textarea>
+                        <textarea asp-for="JsonData" class="form-control, text-danger " style="height: 15rem; width: 100%;"></textarea>
                         <span asp-validation-for="JsonData" class="text-danger"></span>
                     </div>
                     <div class="mt-4 mb-0">
