--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Create.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Create.cshtml
@@ -21,19 +21,20 @@
                             <input asp-for="Translation.Translation" class="form-control" />
                             <label asp-for="Translation.Translation" class="control-label"></label>
                             <span asp-validation-for="Translation.Translation" class="text-danger"></span>
-                        </div>                       
-                       <div class="form-floating mb-3">
-                            <select asp-for="Translation.LanguageId" asp-items="Model.Languages" class="form-select">
-                                <option selected>Select a Language</option>
-                            </select>
-                            <span asp-validation-for="Translation.LanguageId" class="text-danger"></span>                            
                         </div>
-                        @if (Model.Languages.Count != 0)
+                        <div class="form-floating mb-3">
+                            <option selected>Select a Language</option>
+                            <select asp-for="Translation.LanguageId" asp-items="Model.Languages" class="form-select">                                
+                                <label asp-for="Translation.LanguageId" class="control-label"></label>                                
+                            </select>
+                            <span asp-validation-for="Translation.LanguageId" class="text-danger"></span>
+                        </div>
+                        @*@if (Model.Languages.Count != 0)
                         {
                             for (int index = 0; index < Model.Languages.Count; index++)
                             {
                                 <div class="form-floating mb-3">
-                                    <p>Lenguage: @Model.Languages[index].Text</p>
+                                   @* <p>Lenguage: @Model.Languages[index].Text</p>
                                 </div>
                                 <div class="form-floating mb-3">
                                     <input asp-for="TranslationValues[index]" class="form-control" />
@@ -41,7 +42,7 @@
                                     <span asp-validation-for=" TranslationValues[index]" class="text-danger"></span>
                                 </div>
                             }
-                        }
+                        }*@
                         <div class="mt-4 mb-0">
                             <div class="d-grid">
                                 <input type="submit" value="Create" class="btn btn-primary btn-block" />
