--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Details.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Details.cshtml
@@ -26,11 +26,11 @@
                         <label asp-for="Translation.LanguageId" class="control-label"></label>
                         <span asp-validation-for="Translation.LanguageId" class="text-danger"></span>
                     </div>
-                    <div class="form-floating mb-3">
+                    @*<div class="form-floating mb-3">
                         <input asp-for="Translation.Translation" class="form-control" readonly />
                         <label asp-for="Translation.Translation" class="control-label"></label>
                         <span asp-validation-for="Translation.Translation" class="text-danger"></span>
-                    </div>
+                    </div>*@
                 </form>
             </div>
             <div class="card-footer text-center py-3">
