Input KEY readonly in Edit

--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Edit.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Edit.cshtml
@@ -12,7 +12,7 @@
                 <form method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-floating mb-3">
-                        <input asp-for="Key" class="form-control" />
+                        <input asp-for="Key" class="form-control" readonly/>
                         <label asp-for="Key" class="control-label"></label>
                         <span asp-validation-for="Key" class="text-danger"></span>
                     </div>
