Fixed .cshtml in Translation CRUD

--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Create.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<div class="container-fluid">
+<div class="container-fluid mt-3">
     <div class="row justify-content-center">
         <div class="card border-1 rounded-lg p-0">
             <div class="card-header"><h3 class="text-center font-weight-light my-4">Create Translation</h3></div>
@@ -21,17 +21,12 @@
                         <label asp-for="Translation.Translation" class="control-label"></label>
                         <span asp-validation-for="Translation.Translation" class="text-danger"></span>
                     </div>
-                    <div class="form-floating mb-3">
-                        <select asp-for="Translation.LanguageId" asp-items="Model.Languages" class="form-select" >
-                            <option selected>Select a Language</option>                            
-                        </select>
-                        <span asp-validation-for="Translation.LanguageId" class="text-danger"></span>
-                        @*
-                        <select asp-for="Translation.LanguageId" asp-items="Model.Languages">
-                        </select>
-                        <span asp-validation-for="Translation.LanguageId" class="text-danger"></span>
-                        *@
-                    </div>
+                    
+                    <select asp-for="Translation.LanguageId" asp-items="Model.Languages" class="form-select mb-3">
+                        <option selected>Select a Language</option>                            
+                    </select>
+                    <span asp-validation-for="Translation.LanguageId" class="text-danger"></span>
+                    
                     <div class="mt-4 mb-0">
                         <div class="d-grid">
                             <input type="submit" value="Create" class="btn btn-primary btn-block" />
