--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Edit.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<div class="container-fluid">
+<div class="container-fluid mt-3">
     <div class="row justify-content-center">
         <div class="card border-1 rounded-lg p-0">
             <div class="card-header"><h3 class="text-center font-weight-light my-4">Edit</h3></div>
