--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Languages/Delete.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Languages/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete";
 }
 
-<div class="container-fluid">
+<div class="container-fluid mt-3">
     <div class="row justify-content-center">
         <div class="card border-1 rounded-lg p-0">
             <div class="card-header text-center">
