--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Languages/Details.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Languages/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<div class="container-fluid">
+<div class="container-fluid mt-3">
     <div class="row justify-content-center">
         <div class="card border-1 rounded-lg p-0">
             <div class="card-header"><h3 class="font-weight-light my-4 text-center">Details</h3></div>
