changes for upload image in Block Index

--- a/Core/OpenCRM.Core.Web/Components/Table/Table.razor
+++ b/Core/OpenCRM.Core.Web/Components/Table/Table.razor
@@ -46,9 +46,13 @@
                                     }
                                     else
                                     {
-                                        <a href="@item.Url">
-                                            <img src="@item.Url" style="width:50px;" />
+                                        <a href="@item.Url"> 
+                                             <img src="@item.Url" style="width:50px;" />
                                         </a>
+                                          @* <a href="/media/e8d2279d-29a3-4a0e-a143-92f78f338b66.png">
+                                                <img src="/media/e8d2279d-29a3-4a0e-a143-92f78f338b66.png"  style="width:50px;" />
+                                        </a> *@
+
                                     }
                                 </td>
                             }
