Block using javascript

--- a/OpenCRM.Web/Pages/Index.cshtml
+++ b/OpenCRM.Web/Pages/Index.cshtml
@@ -9,7 +9,8 @@
 <div class="text-center">
     <h6 class="display-4">KEY_MANAGE_WELCOME: @Model.Translations?["KEY_MANAGE_WELCOME"]</h6>
   
-    @if (Model.Block != null && Model.Block.Title != "")
+    <article id="card-block" class="block container"></article>
+  @*  @if (Model.Block != null && Model.Block.Title != "")
     {
         <article class="block container">
             <div class="block-info">
@@ -33,5 +34,5 @@
                 }
             </div>
         </article>
-    }
+    }*@
 </div>
