Using CardBlockService on page

--- a/OpenCRM.Web/Pages/Index.cshtml
+++ b/OpenCRM.Web/Pages/Index.cshtml
@@ -2,14 +2,18 @@
 @model OpenCRM.Web.Pages.IndexModel
 @inject OpenCRM.Core.Web.Services.LanguageService.ILanguageService LanguageService
 @inject OpenCRM.Core.Web.Services.TranslationService.ITranslationService TranslationService
+@inject OpenCRM.Core.Web.Services.CardBlockService.ICardBlockService CardBlockService
 @{
     ViewData["Title"] = "Homepage";
 }
 
 <div class="text-center">
     <h6 class="display-4">KEY_MANAGE_WELCOME: @Model.Translations?["KEY_MANAGE_WELCOME"]</h6>
+
+    <p>@CardBlockService.GetBlockByCode("KEY_BLOCKCARD_DEMO").Result?.Data?.Title</p>
   
     <article id="card-block" class="block container"></article>
+
   @*  @if (Model.Block != null && Model.Block.Title != "")
     {
         <article class="block container">
