--- a/Core/OpenCRM.Core.Web/Pages/Shared/_CoreLayout.cshtml
+++ b/Core/OpenCRM.Core.Web/Pages/Shared/_CoreLayout.cshtml
@@ -17,7 +17,7 @@
     </header>
 
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main" class="pt-4 pb-3">
             @RenderBody()
         </main>
     </div>
