--- a/Core/OpenCRM.Core.Web/Areas/Identity2/Pages/Login/Index.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Identity2/Pages/Login/Index.cshtml
@@ -8,7 +8,7 @@
             <section class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-5">
-                        <div class="card border-0 rounded-lg mt-5">
+                        <div class="card rounded-lg mt-5">
                             <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
                             <div class="card-body">
                                 <form id="account" method="post">
