--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
@@ -16,10 +16,29 @@
                         <span asp-validation-for="Model.Code" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
+                        <input asp-for="Model.Title" class="form-control" placeholder="Title" />
+                        <label asp-for="Model.Title" class="control-label"></label>
+                        <span asp-validation-for="Model.Title" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <textarea asp-for="Model.SubTitle" class="form-control" placeholder="SubTitle" style="resize:none;"></textarea>
+                        <label asp-for="Model.SubTitle" class="control-label"></label>
+                        <span asp-validation-for="Model.SubTitle" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating mb-3">
                         <textarea asp-for="Model.Description" class="form-control" placeholder="Description" style="height:100px; resize:none;"></textarea>
                         <label asp-for="Model.Description" class="control-label"></label>
                         <span asp-validation-for="Model.Description" class="text-danger"></span>
                     </div>
+
+                    <select class="form-select mb-3" aria-label="Default select example" asp-for="ImageIdSelected">
+                        <option selected value="">Select an images</option>
+                        @foreach(var image in Model.Images)
+                        {
+                            <option value="@image.Id">@image.ImageName</option>
+                        }
+                    </select>
+
                     <div class="mt-4 mb-0">
                         <div class="d-grid">
                             <input type="submit" value="Create" class="btn btn-primary btn-block"/>
